# task-dtech

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
app/: __main__.py
app/api/: __init__.py  middleware.py  schemas.py
app/api/handlers/: __init__.py  accounts.py  auth.py  payments.py  users.py  webhook.py
app/core/: __init__.py  config.py  database.py  exceptions.py  factory.py
app/models/: __init__.py  account.py  base.py  payment.py  user.py
app/repositories/: __init__.py  account.py  payment.py  user.py
app/security/: __init__.py  jwt.py  password.py  signature.py
app/services/: __init__.py  account.py  admin.py  auth.py  payment.py  webhook.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 001_initial.py
tests/: helpers.py  test_signature.py
tests/api/: conftest.py  test_accounts.py  test_admin_users.py  test_auth.py  test_payments.py  test_webhook.py
tests/services/: conftest.py  test_admin.py  test_auth.py  test_webhook.py
