[project]
name = "payment-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sanic>=23.12",
    "sanic-ext>=23.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pyjwt>=2.9",
    "bcrypt>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "sanic-testing>=23.12",
    "psycopg2-binary>=2.9",
]

[tool.ruff.lint]
per-file-ignores = { "app/models/*.py" = ["F821"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
