[project]
name = "payment-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sanic>=25.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "alembic>=1.18",
    "pyjwt>=2.13",
    "bcrypt>=5.0",
    "pydantic>=2.13",
    "pydantic-settings>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "sanic-testing>=24.6",
    "psycopg2-binary>=2.9",
]

[tool.ruff.lint]
per-file-ignores = { "app/models/*.py" = ["F821"] }

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app", "app.*"]
